# claw-code

./: .claude.json  .gitignore  CLAUDE.md  README.md  fix_mypy_true.py  patch.diff  patch_pr.py  patch_py.diff  patch_rs.diff  plan.md  pr_body.txt  pr_description.md  pr_description.txt  pyproject.toml  rust_test  rust_test2  test_plan.sh  test_session_control.rs  test_session_id.py  test_traversal.py  test_traversal_2.py
.Jules/: palette.md
.claude/: settings.json
.github/scripts/: check_doc_source_of_truth.py
.github/workflows/: auto-merge.yml  ci.yml  rust-ci.yml  self-heal.yml  self_heal.yml
.jules/: bolt.md  sentinel.md
docs/: issue_task_proposals.md
rust/crates/api/src/: http_client.rs
rust/crates/api/tests/: client_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/mock-anthropic-service/src/: lib.rs
rust/scripts/: run_mock_parity_diff.py
scripts/: healthcheck.py  self_heal.py
src/: command_graph.py  commands.py  execution_registry.py  main.py  models.py  port_manifest.py  query_engine.py  runtime.py  session_store.py  snapshot_loader.py  task.py  tool_pool.py  tools.py
src/selfheal/: __init__.py  config_healer.py  env_validator.py  health.py  resilience.py
tests/: test__archive_helper.py  test_bootstrap_graph.py  test_command_graph.py  test_commands.py  test_execution_registry.py  test_main.py  test_port_manifest.py  test_porting_workspace.py  test_query_engine_coverage.py  test_replLauncher.py  test_selfheal.py  test_session_store.py  test_setup.py  test_system_init.py  test_tools.py
(+18 files in other folders)
