[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-code"
version = "0.1.0"
description = "Python workspace for claw CLI agent harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "build",
]
selfheal = [
    "types-requests",
    "types-PyYAML",
    "types-beautifulsoup4",
    "types-Pillow",
]

[project.scripts]
claw-healthcheck = "scripts.healthcheck:main"
